--- a/README.Rmd
+++ b/README.Rmd
@@ -18,12 +18,12 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental) [![R-CMD-check](https://github.com/larmarange/guideR/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/larmarange/guideR/actions/workflows/R-CMD-check.yaml) [![Codecov test coverage](https://codecov.io/gh/larmarange/guideR/graph/badge.svg)](https://app.codecov.io/gh/larmarange/guideR) 
-[![CRAN status](https://www.r-pkg.org/badges/version/guideR)]
+![CRAN status](https://www.r-pkg.org/badges/version/guideR)
 <!-- badges: end -->
 
 `guideR` package is a companion for the manual *guide-R : Guide pour l’analyse de données d’enquêtes avec R* available at <https://larmarange.github.io/guide-R/>.
 
-`guideR` implements miscellaneous functions introduced in *guide-R* to facilitate statistical analysis.
+`guideR` implements miscellaneous functions introduced in *guide-R* to facilitate statistical analysis and manipulation of survey data.
 
 ![](https://larmarange.github.io/guide-R/ressources/cover-hd.png){width="450"}
 
