--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,7 @@ knitr::opts_chunk$set(
 
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental) [![R-CMD-check](https://github.com/larmarange/guideR/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/larmarange/guideR/actions/workflows/R-CMD-check.yaml) [![Codecov test coverage](https://codecov.io/gh/larmarange/guideR/graph/badge.svg)](https://app.codecov.io/gh/larmarange/guideR) 
 [![CRAN status](https://www.r-pkg.org/badges/version/guideR)](https://CRAN.R-project.org/package=guideR)
+[![DOI](https://zenodo.org/badge/927604735.svg)](https://doi.org/10.5281/zenodo.14871649)
 <!-- badges: end -->
 
 `guideR` package is a companion for the manual *guide-R : Guide pour l’analyse de données d’enquêtes avec R* available at <https://larmarange.github.io/guide-R/>.
