--- a/README.Rmd
+++ b/README.Rmd
@@ -17,18 +17,15 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 
-[![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html#stable)
-[![R-CMD-check](https://github.com/larmarange/guideR/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/larmarange/guideR/actions/workflows/R-CMD-check.yaml) 
-[![Codecov test coverage](https://codecov.io/gh/larmarange/guideR/graph/badge.svg)](https://app.codecov.io/gh/larmarange/guideR) 
-[![CRAN status](https://www.r-pkg.org/badges/version/guideR)](https://CRAN.R-project.org/package=guideR)
-[![DOI](https://zenodo.org/badge/927604735.svg)](https://doi.org/10.5281/zenodo.14871649)
+[![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html#stable) [![R-CMD-check](https://github.com/larmarange/guideR/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/larmarange/guideR/actions/workflows/R-CMD-check.yaml) [![Codecov test coverage](https://codecov.io/gh/larmarange/guideR/graph/badge.svg)](https://app.codecov.io/gh/larmarange/guideR) [![CRAN status](https://www.r-pkg.org/badges/version/guideR)](https://CRAN.R-project.org/package=guideR) [![DOI](https://zenodo.org/badge/927604735.svg)](https://doi.org/10.5281/zenodo.14871649)
+
 <!-- badges: end -->
 
-`guideR` package is a companion for the manual *guide-R : Guide pour l’analyse de données d’enquêtes avec R* available at <https://larmarange.github.io/guide-R/>.
+![](https://larmarange.github.io/guide-R/ressources/cover-hd.png){style="float: right;" width="150"}
 
-`guideR` implements miscellaneous functions introduced in *guide-R* to facilitate statistical analysis and manipulation of survey data.
+The `guideR` package is a companion for the manual *guide-R : Guide pour l’analyse de données d’enquêtes avec R* available at <https://larmarange.github.io/guide-R/>.
 
-![](https://larmarange.github.io/guide-R/ressources/cover-hd.png){width="450"}
+`guideR` implements miscellaneous functions introduced in *guide-R* to facilitate statistical analysis, statistical plots and manipulation of survey data.
 
 ## Installation & Documentation
 
